--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-intl": "^5.10.1",
     "react-paypal-button-v2": "^2.6.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
